<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".features.ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/application"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:flow_wrapMode="aligned">

            <ImageView
                android:layout_width="30dp"
                android:background="?attr/colorPrimary"
                android:layout_height="match_parent"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:divider="?android:dividerVertical"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/languageItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_globe"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/language"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />
                    <TextView
                        android:id="@+id/languageTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="Arabic"

                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/locationItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_map_marker_alt"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/location"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />

                    <TextView
                        android:id="@+id/locationTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="GPS"

                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/weather"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:flow_wrapMode="aligned">

            <ImageView
                android:layout_width="30dp"
                android:background="?attr/colorPrimary"
                android:layout_height="match_parent"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:divider="?android:dividerVertical"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/tempItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_temperature_high"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/temperature"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />

                    <TextView
                        android:id="@+id/tempTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="Celesiuis"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/windItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_wind"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/windSpeed"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />

                    <TextView
                        android:id="@+id/windSpeedTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="Meter/Sec"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/alerts"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:flow_wrapMode="aligned">

            <ImageView
                android:layout_width="30dp"
                android:background="?attr/colorPrimary"
                android:layout_height="match_parent"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:divider="?android:dividerVertical"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/alertTypeItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_alerts"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/type"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />

                    <TextView
                        android:id="@+id/alertTypeTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="Notification"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/alertTimeItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_clock"
                        android:drawableTint="?colorPrimary"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="10dp"
                        android:text="@string/time"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                         />

                    <TextView
                        android:id="@+id/alertTimeTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="10:00 am"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:drawableEnd="@drawable/ic_caret_down"
                        android:drawablePadding="25dp"
                        app:drawableTint="?attr/colorPrimaryVariant"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>